# Birl

./: CMakeLists.txt  Help  README  about.c  about.h  argv.c  argv.h  birl.cbp  birl.depend  birl.desktop.in  birl.layout  common.c  common.h  config.c  config.h  defines.c  defines.h  dlfunc.c  dlfunc.h  main.c  main_birl.c  main_birl.h  main_window.c  main_window.h  md5.c  md5.h  mentohust.c  mentohust.conf  mentohust.h  mycheck.c  mycheck.h  myconfig.c  myconfig.h  myfunc.c  myini.c  myini.h  mystate.c  pacp_func.c  pacp_func.h  read_file.c  (+8 more)
birl/: birl.cfg
debian/: birl-suid.postinst  birl-suid.postrm  changelog  control  copyright  docs  rules
fakeroot/DEBIAN/: control  md5sums
fakeroot/usr/share/applications/: birl.desktop
